kubernetes/apps/development/coder-workspace/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder-workspace-local
spec:
  type: ExternalName
  externalName: 10.0.98.101
