kubernetes/apps/development/coder-workspace/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-workspace-local-ingress
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN_2}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: external
  rules:
    - host: "coder-workspace.${SECRET_DOMAIN_2}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder-workspace-local
                port:
                  number: 3000
